Add Luncheon management and registration
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -24,6 +24,7 @@ security:
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/households, role: ROLE_CAN_VIEW_OTHER_HOUSEHOLD }
         - { path: ^/residences, role: ROLE_CAN_VIEW_OTHER_HOUSEHOLD }
+        - { path: ^/luncheon, role: ROLE_CAN_EDIT_LUNCHEON }
         - { path: ^/persons, role: ROLE_CAN_VIEW_OTHER_PERSON }
         - { path: ^/phones, role: ROLE_CAN_VIEW_OTHER_PERSON }
         - { path: ^/emails, role: ROLE_CAN_VIEW_OTHER_PERSON }
@@ -48,5 +49,5 @@ security:
         ROLE_CAN_EDIT_OWN_HOUSEHOLD: ROLE_CAN_VIEW_OWN_HOUSEHOLD
         ROLE_CAN_EDIT_OTHER_HOUSEHOLD: ROLE_CAN_VIEW_OTHER_HOUSEHOLD
         ROLE_USER: [ ROLE_CAN_EDIT_OWN_PERSON, ROLE_CAN_EDIT_OWN_HOUSEHOLD, ROLE_CAN_VIEW_OWN_TRANSACTION ]
-        ROLE_ADMIN: [ ROLE_USER, ROLE_CAN_EDIT_OTHER_PERSON, ROLE_CAN_EDIT_OTHER_HOUSEHOLD, ROLE_CAN_EDIT_OTHER_TRANSACTION, ROLE_SONATA_ADMIN ]
+        ROLE_ADMIN: [ ROLE_USER, ROLE_CAN_EDIT_OTHER_PERSON, ROLE_CAN_EDIT_OTHER_HOUSEHOLD, ROLE_CAN_EDIT_OTHER_TRANSACTION, ROLE_CAN_EDIT_LUNCHEON, ROLE_SONATA_ADMIN ]
         ROLE_SUPER_ADMIN: [ ROLE_ADMIN ]
