--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "friendsofsymfony/user-bundle": "~1.3",
         "sonata-project/admin-bundle": "~2.3",
         "sonata-project/doctrine-orm-admin-bundle": "~2.3",
-        "knplabs/knp-paginator-bundle": "~2.4"
+        "knplabs/knp-paginator-bundle": "~2.4",
+        "lexik/form-filter-bundle": "~3.0"
     },
     "scripts": {
         "post-install-cmd": [
