--- a/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
+++ b/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
+umra_member_content_blocks:
+    resource: "@UMRAMemberBundle/Resources/config/routing/contentblock.yml"
+    prefix:   /content_blocks
 UMRA_Landing:
     pattern:  /
     defaults: { _controller: UMRAMemberBundle:Default:index }
