Add Twig function for printing contents from ContentBlock

--- a/src/UMRA/Bundle/MemberBundle/Resources/config/services.yml
+++ b/src/UMRA/Bundle/MemberBundle/Resources/config/services.yml
@@ -50,3 +50,10 @@ services:
         arguments: ["@logger"]
         tags:
             - { name: doctrine.event_subscriber, priority: 10 }
+
+    umra_member.twig_extensions:
+        class: UMRA\Bundle\MemberBundle\Services\TwigExtensions
+        arguments: ["@doctrine.orm.default_entity_manager"]
+        public: false
+        tags:
+            - { name: twig.extension }
