--- a/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
+++ b/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
@@ -210,6 +210,10 @@ UMRA_Trans:
     pattern:  /transactions
     defaults: { _controller: UMRAMemberBundle:Trans:index }
     methods: [GET]
+UMRA_Trans_reconcile:
+    pattern: /transaction/reconcile
+    defaults: { _controller: UMRAMemberBundle:Trans:reconcile }
+    methods: [PUT]
 UMRA_Trans_edit:
     pattern:  /transaction/{id}/edit
     defaults: { _controller: UMRAMemberBundle:Trans:edit }
