--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
     },
     "require": {
         "php": ">=5.3.3",
+        "ext-curl": "*",
+        "ext-json": "*",
         "symfony/symfony": "~2.6,<2.7",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
@@ -25,7 +27,8 @@
         "sonata-project/admin-bundle": "~2.3",
         "sonata-project/doctrine-orm-admin-bundle": "~2.3",
         "knplabs/knp-paginator-bundle": "~2.4",
-        "lexik/form-filter-bundle": "~3.0"
+        "lexik/form-filter-bundle": "~3.0",
+        "paypal/rest-api-sdk-php" : "1.*"
     },
     "scripts": {
         "post-install-cmd": [
