Initial PayPal implementation (needs cleanup)
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -13,3 +13,7 @@ parameters:
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    paypal_environment: sandbox
+    paypal_client_id: ~
+    paypal_secret: ~
