Implement PayPal Checkout success callback
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
+++ b/src/UMRA/Bundle/MemberBundle/Resources/config/routing.yml
@@ -210,6 +210,10 @@ UMRA_Trans:
     pattern:  /transactions
     defaults: { _controller: UMRAMemberBundle:Trans:index }
     methods: [GET]
+UMRA_Trans_paypal_callback_success:
+    pattern: /transaction/paypal/callback/success
+    defaults: { _controller: UMRAMemberBundle:Trans:paypalCallbackSuccess }
+    methods: [GET]
 UMRA_Trans_reconcile:
     pattern: /transaction/reconcile
     defaults: { _controller: UMRAMemberBundle:Trans:reconcile }
