--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,6 +22,7 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/transaction/paypal/callback/success, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/households, role: ROLE_CAN_VIEW_OTHER_HOUSEHOLD }
         - { path: ^/residences, role: ROLE_CAN_VIEW_OTHER_HOUSEHOLD }
         - { path: ^/luncheon, role: ROLE_CAN_EDIT_LUNCHEON }
