--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -23,6 +23,7 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/transaction/paypal/callback/success, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/transaction/paypal/callback/cancel, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/households, role: ROLE_CAN_VIEW_OTHER_HOUSEHOLD }
         - { path: ^/residences, role: ROLE_CAN_VIEW_OTHER_HOUSEHOLD }
         - { path: ^/luncheon, role: ROLE_CAN_EDIT_LUNCHEON }
