--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "sonata-project/doctrine-orm-admin-bundle": "~2.3",
         "knplabs/knp-paginator-bundle": "~2.4",
         "lexik/form-filter-bundle": "~3.0",
-        "paypal/rest-api-sdk-php" : "1.*"
+        "paypal/rest-api-sdk-php" : "1.*",
+        "ramsey/uuid": "~2.8",
+        "moontoast/math": "^1.1"
     },
     "scripts": {
         "post-install-cmd": [
@@ -58,5 +60,6 @@
         "branch-alias": {
             "dev-master": "2.6-dev"
         }
-    }
+    },
+    "prefer-stable": true
 }
