Make umra_content twig function tolerant of missing content blocks, but log
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/config/services.yml
+++ b/src/UMRA/Bundle/MemberBundle/Resources/config/services.yml
@@ -53,7 +53,7 @@ services:
 
     umra_member.twig_extensions:
         class: UMRA\Bundle\MemberBundle\Services\TwigExtensions
-        arguments: ["@doctrine.orm.default_entity_manager"]
+        arguments: ["@doctrine.orm.default_entity_manager", "@logger"]
         public: false
         tags:
             - { name: twig.extension }
