--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -39,6 +39,7 @@ security:
         - { path: ^/transaction/, role: ROLE_CAN_VIEW_OWN_TRANSACTION }
         - { path: ^/profile, role: ROLE_USER }
         - { path: ^/household/, role: ROLE_USER }
+        - { path: ^/my-household, role: ROLE_USER }
         - { path: ^/person/, role: ROLE_USER }
         - { path: ^/phone/, role: ROLE_USER }
         - { path: ^/residence/, role: ROLE_USER }
