Remove SonataAdminBundle stuff
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -45,7 +45,6 @@ security:
         - { path: ^/residence/, role: ROLE_USER }
         - { path: ^/email/, role: ROLE_USER }
         - { path: ^/renew, role: ROLE_USER }
-        - { path: ^/admin/, role: ROLE_ADMIN }
 
     role_hierarchy:
         ROLE_CAN_EDIT_OWN_PERSON: ROLE_CAN_VIEW_OWN_PERSON
@@ -53,5 +52,5 @@ security:
         ROLE_CAN_EDIT_OWN_HOUSEHOLD: ROLE_CAN_VIEW_OWN_HOUSEHOLD
         ROLE_CAN_EDIT_OTHER_HOUSEHOLD: ROLE_CAN_VIEW_OTHER_HOUSEHOLD
         ROLE_USER: [ ROLE_CAN_EDIT_OWN_PERSON, ROLE_CAN_EDIT_OWN_HOUSEHOLD, ROLE_CAN_VIEW_OWN_TRANSACTION ]
-        ROLE_ADMIN: [ ROLE_USER, ROLE_CAN_EDIT_OTHER_PERSON, ROLE_CAN_EDIT_OTHER_HOUSEHOLD, ROLE_CAN_EDIT_OTHER_TRANSACTION, ROLE_CAN_EDIT_LUNCHEON, ROLE_SONATA_ADMIN ]
+        ROLE_ADMIN: [ ROLE_USER, ROLE_CAN_EDIT_OTHER_PERSON, ROLE_CAN_EDIT_OTHER_HOUSEHOLD, ROLE_CAN_EDIT_OTHER_TRANSACTION, ROLE_CAN_EDIT_LUNCHEON ]
         ROLE_SUPER_ADMIN: [ ROLE_ADMIN ]
