--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
         "psr-0": { "": "src/" }
     },
     "require": {
-        "php": ">=5.5",
+        "php": ">=5.3.3",
         "ext-curl": "*",
         "ext-json": "*",
-        "symfony/symfony": "~2.7,<2.8",
+        "symfony/symfony": "~2.6,<2.7",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
         "twig/extensions": "~1.2",
@@ -21,8 +21,8 @@
         "sensio/framework-extra-bundle": "~3.0",
         "sensio/generator-bundle": "~2.3",
         "incenteev/composer-parameter-handler": "~2.0",
-        "symfony/intl": "~2.7",
-        "symfony/polyfill-intl-icu": "1.1.*",
+        "symfony/intl": "2.6.0",
+        "symfony/icu": "1.0.*",
         "friendsofsymfony/user-bundle": "~1.3",
         "knplabs/knp-paginator-bundle": "~2.4",
         "lexik/form-filter-bundle": "~3.0",
@@ -58,7 +58,7 @@
             "file": "app/config/parameters.yml"
         },
         "branch-alias": {
-            "dev-master": "2.7-dev"
+            "dev-master": "2.6-dev"
         }
     },
     "prefer-stable": true
