--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -43,6 +43,7 @@ security:
         - { path: ^/residence/, role: ROLE_USER }
         - { path: ^/email/, role: ROLE_USER }
         - { path: ^/renew, role: ROLE_USER }
+        - { path: ^/luncheon/register, role: ROLE_USER }
 
     role_hierarchy:
         ROLE_CAN_EDIT_OWN_PERSON: ROLE_CAN_VIEW_OWN_PERSON
